--- a/apps/scrambled-sounds/app/page.module.scss
+++ b/apps/scrambled-sounds/app/page.module.scss
@@ -1,5 +1,5 @@
 @use "../../../packages/ui/src/styles/variables" as vars;
 
 .page {
-  background: vars.$Brand-primary;
+  background: vars.$brand-primary;
 }
